--- a/dethphysics/Makefile
+++ b/dethphysics/Makefile
@@ -1,10 +1,12 @@
 CC = gcc
 
 all:
-	$(CC) vector.c -o vector -lGL -lSDL
-
-clean:
-	@echo Cleaning up...
-	@rm vector	
-	@echo Done.
-
+	$(CC) planoInclinado.c -o plano -lGL -lSDL -lglut
+	$(CC) vector.c -o vector -lGL -lSDL -lglut
+	$(CC) vector3D.c -o 3d -lGL -lSDL -lglut
+plano:
+	$(CC) planoInclinado.c -o plano -lGL -lSDL -lglut
+vector2d:
+	$(CC) vector.c -o vector -lGL -lSDL -lglut
+vector3d:
+	$(CC) vector3D.c -o 3d -lGL -lSDL -lglut
